# inow-full

backend/: .env  main.py  pyproject.toml
backend/app/api_v1/: api.py  deps.py
backend/app/api_v1/endpoints/: c2c.py  login.py  sport_event.py  user.py
backend/app/core/: config.py  db.py  init_db.py  security.py  utils.py
backend/app/core/crud/: __init__.py  base.py  c2c.py  sport_event.py  user.py
backend/app/core/models/: __init__.py  c2c.py  members.py  sport_event.py  user.py
backend/app/core/schemas/: __init__.py  c2c.py  sport_event.py  user.py
frontend/: README.md  nuxt.config.js  package-lock.json  package.json
frontend/assets/css/: style.css
frontend/components/: Navbar.vue  Notification.vue
frontend/layouts/: LoginLayout.vue  MainLayout.vue
frontend/pages/: index.vue  login.vue  signup.vue
frontend/pages/events/: _id.vue  add.vue  id_1.vue  id_2.vue  index.vue
frontend/pages/exchange/: index.vue
frontend/pages/objects/: _id.vue  id_1.vue  index.vue
frontend/pages/services/: index.vue
frontend/pages/services/rent_bicycle/: index.vue
frontend/pages/users/: _id.vue  index.vue  me.vue
frontend/store/: index.js
